k8s-demo-deployment/ch6-create-a-small-local-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-demo-react
            port:
              number: 80
  - host: k8s-demo-fastapi-app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-demo-fastapi-app
            port:
              number: 8080
